recursion.cons.lessons.recursion.cons.IsMember.scala.error
isMember:5: error: ';' expected but ')' found.
	if(l.head) == v){
                       ^