recursion.cons.lessons.recursion.cons.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
	if(l==Nil){
		return false;
	}
	if(l.head) == v){
		return true;
	}
return isMember(l.tail,v);
}